[package]
name = "rates"
version = "0.7.0"
authors = ["lunush"]
edition = "2024"
description = "CLI tool to get currency exchange rates in your terminal"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lunush/rates"
homepage = "https://rates.rs/"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
categories = ["command-line-interface"]
keywords = ["exchange-rates", "fiat-currency", "cryptocurrency"]

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], default-features = false }
serde = "1.0"
serde_json = "1.0"
directories = "6.0"
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
